--- a/src/04/Box.module.css
+++ b/src/04/Box.module.css
@@ -14,4 +14,10 @@
     align-items: center; 
     margin: 5px;
   }
+
+  .dt {
+    font-size: larger;
+    font-weight: bold;
+    color: blue;  
+  }
   
